rest/rest-service.yaml

kind: Service
apiVersion: v1
metadata:
  name: rest-svc
  labels:
   app: rest
spec:
  #type: NodePort
  selector:
    app: rest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
